@@ -17,11 +17,14 @@ package dev.ikm.tinkar.reasoner.elksnomed;
 
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.util.Collection;
+import java.util.Collections;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.atomic.AtomicInteger;
-import java.util.stream.Collectors;
+import java.util.stream.IntStream;
 
 import org.eclipse.collections.api.list.primitive.ImmutableIntList;
+import org.eclipse.collections.impl.factory.primitive.IntLists;
 
 import dev.ikm.elk.snomed.model.Concept;
 import dev.ikm.elk.snomed.model.RoleType;
@@ -29,38 +32,69 @@ import dev.ikm.tinkar.common.service.PrimitiveData;
 
 public class ElkSnomedData {
 
-	public final ConcurrentHashMap<Integer, Concept> nidConceptMap = new ConcurrentHashMap<>();
+	private final ConcurrentHashMap<Integer, Concept> nidConceptMap = new ConcurrentHashMap<>();
 
-	public final ConcurrentHashMap<Integer, RoleType> nidRoleMap = new ConcurrentHashMap<>();
+	private final ConcurrentHashMap<Integer, RoleType> nidRoleTypeMap = new ConcurrentHashMap<>();
 
-	public final AtomicInteger processedSemantics = new AtomicInteger();
+	private final AtomicInteger activeConceptCount = new AtomicInteger();
 
-	public final AtomicInteger activeConceptCount = new AtomicInteger();
+	private final AtomicInteger inactiveConceptCount = new AtomicInteger();
 
-	public final AtomicInteger inactiveConceptCount = new AtomicInteger();
+	private ImmutableIntList reasonerConceptSet;
 
-	public ImmutableIntList classificationConceptSet = null;
-
-	public RoleType getRole(int roleNid) {
-		return this.nidRoleMap.computeIfAbsent(roleNid, RoleType::new);
+	public Collection<Concept> getConcepts() {
+		return Collections.unmodifiableCollection(nidConceptMap.values());
 	}
 
-	public Concept getConcept(int conceptNid) {
-		return this.nidConceptMap.computeIfAbsent(conceptNid, Concept::new);
+	public Collection<RoleType> getRoleTypes() {
+		return Collections.unmodifiableCollection(nidRoleTypeMap.values());
+	}
+
+	public RoleType getOrCreateRoleType(int roleNid) {
+		return nidRoleTypeMap.computeIfAbsent(roleNid, RoleType::new);
+	}
+
+	public Concept getOrCreateConcept(int conceptNid) {
+		return nidConceptMap.computeIfAbsent(conceptNid, Concept::new);
+	}
+
+	public int getActiveConceptCount() {
+		return activeConceptCount.get();
+	}
+
+	public int incrementActiveConceptCount() {
+		return activeConceptCount.incrementAndGet();
+	}
+
+	public int getInactiveConceptCount() {
+		return inactiveConceptCount.get();
+	}
+
+	public int incrementInactiveConceptCount() {
+		return inactiveConceptCount.incrementAndGet();
+	}
+
+	public ImmutableIntList getReasonerConceptSet() {
+		return reasonerConceptSet;
+	}
+
+	public void initializeReasonerConceptSet() {
+		IntStream conceptNids = nidConceptMap.entrySet().stream().mapToInt(es -> (int) es.getKey()).sorted();
+		this.reasonerConceptSet = IntLists.immutable.ofAll(conceptNids);
 	}
 
 	public void writeConcepts(Path path) throws Exception {
 		Files.write(path, nidConceptMap.keySet().stream() //
 				.map(key -> PrimitiveData.publicId(key).asUuidArray()[0] + "\t" + PrimitiveData.text(key)) //
 				.sorted() //
-				.collect(Collectors.toList()));
+				.toList());
 	}
 
-	public void writeRoles(Path path) throws Exception {
-		Files.write(path, nidRoleMap.keySet().stream() //
+	public void writeRoleTypes(Path path) throws Exception {
+		Files.write(path, nidRoleTypeMap.keySet().stream() //
 				.map(key -> PrimitiveData.publicId(key).asUuidArray()[0] + "\t" + PrimitiveData.text(key)) //
 				.sorted() //
-				.collect(Collectors.toList()));
+				.toList());
 	}
 
 }
